update POD validator for 1.0 spec

--- a/ckanext/datajson/templates/datajsonvalidator.html
+++ b/ckanext/datajson/templates/datajsonvalidator.html
@@ -10,7 +10,7 @@
     <div class="module-content">
       <h1>Validate a Project Open Data /data.json File</h1>
       
-      <p>Let&rsquo;s validate that a data.json file meets the <a href="http://project-open-data.github.io/schema/">Project Open Data Metadata Schema</a>.</p>
+      <p>Let&rsquo;s validate that a data.json file meets the <a href="http://project-open-data.github.io/schema/">Project Open Data Metadata Schema</a> version 1.0.</p>
 	
       <form method="post">
       	<label for="validate_url">Address of data.json file</label>
