--- a/ckanext/datajson/templates/organization/read.html
+++ b/ckanext/datajson/templates/organization/read.html
@@ -5,10 +5,12 @@
         {% link_for _('Add Dataset'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
         <button id="btnEdi" class="btn btn-secondary">Enterprise Data Inventory</button>
 		<button id="btnPdl" class="btn btn-secondary">Public Data Listing</button>
+		<button id="btnDraft" class="btn btn-secondary">Export Drafts</button>
     {% endif %}
 
         <form id="formEdi" action="{{c.group_dict.id + '/edi.json' }}"></form>
         <form id="formPdl" action="{{c.group_dict.id + '/data.json' }}"></form>
+        <form id="formDraft" action="{{c.group_dict.id + '/draft.json' }}"></form>
 
         <script type="text/javascript" src="/base/vendor/jquery.min.js"></script>
         <script type="text/javascript">
@@ -19,6 +21,10 @@
 
                 $('#btnPdl').click(function () {
                     $('#formPdl').submit();
+                });
+
+                $('#btnDraft').click(function () {
+                    $('#formDraft').submit();
                 });
             });
         </script>
