huge code refactoring and cleanup :gem:

--- a/ckanext/datajson/templates/organization/read.html
+++ b/ckanext/datajson/templates/organization/read.html
@@ -9,7 +9,7 @@
     {% endif %}
 
         <form id="formEdi" action="{{c.group_dict.id + '/edi.json' }}"></form>
-        <form id="formPdl" action="{{c.group_dict.id + '/data.json' }}"></form>
+        <form id="formPdl" action="{{c.group_dict.id + '/pdl.json' }}"></form>
         <form id="formDraft" action="{{c.group_dict.id + '/draft.json' }}"></form>
 
         <script type="text/javascript" src="/base/vendor/jquery.min.js"></script>
