Renaming export buttons

--- a/ckanext/datajson/templates/organization/read.html
+++ b/ckanext/datajson/templates/organization/read.html
@@ -3,24 +3,24 @@
 {% block page_primary_action %}
     {% if h.check_access('package_create', {'owner_org': c.group_dict.id}) %}
         {% link_for _('Add Dataset'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
-        <button id="btnEdi" class="btn btn-secondary">Enterprise Data Inventory</button>
-		<button id="btnPdl" class="btn btn-secondary">Public Data Listing</button>
+        <button id="btnUnredacted" class="btn btn-secondary">Unredacted Inventory</button>
+		<button id="btnRedacted" class="btn btn-secondary">Redacted Inventory</button>
 		<button id="btnDraft" class="btn btn-secondary">Export Drafts</button>
     {% endif %}
 
-        <form id="formEdi" action="{{c.group_dict.id + '/edi.json' }}"></form>
-        <form id="formPdl" action="{{c.group_dict.id + '/pdl.json' }}"></form>
+        <form id="formUnredacted" action="{{c.group_dict.id + '/unredacted.json' }}"></form>
+        <form id="formRedacted" action="{{c.group_dict.id + '/redacted.json' }}"></form>
         <form id="formDraft" action="{{c.group_dict.id + '/draft.json' }}"></form>
 
         <script type="text/javascript" src="/base/vendor/jquery.min.js"></script>
         <script type="text/javascript">
             $(document).ready(function () {
-                $('#btnEdi').click(function () {
-                    $('#formEdi').submit();
+                $('#btnUnredacted').click(function () {
+                    $('#formUnredacted').submit();
                 });
 
-                $('#btnPdl').click(function () {
-                    $('#formPdl').submit();
+                $('#btnRedacted').click(function () {
+                    $('#formRedacted').submit();
                 });
 
                 $('#btnDraft').click(function () {
