--- a/ckanext/datajson/templates/organization/read.html
+++ b/ckanext/datajson/templates/organization/read.html
@@ -3,10 +3,10 @@
 {% block page_primary_action %}
     {% if h.check_access('package_create', {'owner_org': c.group_dict.id}) %}
         {% link_for _('Add Dataset'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
+        {% if h.datajson_inventory_links_enabled() %}
         <button id="btnUnredacted" class="btn btn-secondary">Unredacted Inventory</button>
-		<button id="btnRedacted" class="btn btn-secondary">Redacted Inventory</button>
-		<button id="btnDraft" class="btn btn-secondary">Export Drafts</button>
-    {% endif %}
+        <button id="btnRedacted" class="btn btn-secondary">Redacted Inventory</button>
+        <button id="btnDraft" class="btn btn-secondary">Export Drafts</button>
 
         <form id="formUnredacted" action="{{c.group_dict.id + '/unredacted.json' }}"></form>
         <form id="formRedacted" action="{{c.group_dict.id + '/redacted.json' }}"></form>
@@ -28,4 +28,6 @@
                 });
             });
         </script>
+        {% endif %}
+    {% endif %}
 {% endblock %}
