--- a/ckanext/datajson/templates/html_rendition.html
+++ b/ckanext/datajson/templates/html_rendition.html
@@ -14,7 +14,7 @@
 
       <ul>
         <li>Use the <a href='/dataset'>Dataset Search &amp; Browse Page</a> to search datasets or browse and filter by publisher or subject.</li>
-        <li>Download the complete data catalog in our <a href="/data.json">data.json</a> or <a href="/data.jsonld">data.jsonld</a> file, which uses the <a href="https://resources.data.gov/schemas/dcat-us/v1.1/">Project Open Data Metadata Schema</a>.</li>
+        <li>Download the complete data catalog in our <a href="/data.json">data.json</a> or <a href="/data.jsonld">data.jsonld</a> file, which uses the <a href="https://resources.data.gov/schemas/dcat-us/v1.1/">DCAT-US Metadata Schema</a>.</li>
         <li>Scroll down to see a list of datasets in the catalog with the most recently updated datesets listed first.</li>
       </ul>
 
