--- a/ckanext/datajson/templates/organization/read.html
+++ b/ckanext/datajson/templates/organization/read.html
@@ -2,9 +2,7 @@
 
 {% block page_primary_action %}
     {% if h.check_access('package_create', {'owner_org': c.group_dict.id}) %}
-        {% block add_dataset_button %}
-            {% link_for _('Add Dataset'), controller='package', action='new', group=c.group_dict.id, class_='btn btn-primary', icon='plus-sign-alt' %}
-        {% endblock %}
+        {% snippet 'snippets/add_dataset.html', group=group_dict.id %}
         {% if h.datajson_inventory_links_enabled() %}
         <button id="btnUnredacted" class="btn btn-secondary">Unredacted Inventory</button>
         <button id="btnRedacted" class="btn btn-secondary">Redacted Inventory</button>
