Back to previous solution using 'super()' tag.

--- a/ckanext/datajson/templates/organization/read.html
+++ b/ckanext/datajson/templates/organization/read.html
@@ -1,8 +1,8 @@
 {% ckan_extends %}
 
 {% block page_primary_action %}
+    {{ super() }}
     {% if h.check_access('package_create', {'owner_org': c.group_dict.id}) %}
-        {% snippet 'snippets/add_dataset.html' %}
         {% if h.datajson_inventory_links_enabled() %}
         <button id="btnUnredacted" class="btn btn-secondary">Unredacted Inventory</button>
         <button id="btnRedacted" class="btn btn-secondary">Redacted Inventory</button>
